# my-first-agent

./: .env  .gitignore  README.md  pyproject.toml
Week-1/: crypto_tracker.py  day3.py  day4.py  day5.py  main.py  news_cli.py
Week-2/: agent_log.json  data.json  day10.py  day10_advanced.py  day11.py  day11_io.py  day12_test.ipynb  day13_14.ipynb  day8.py  day8_types.py  day9.py  day9_pydantic.py  day_14_challenge.ipynb  instructions.txt  large_context.txt  memory.txt  prototyping.ipynb  server_metrics.csv
Week-3/: day15_hello_ai.py
